--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,9 +16,15 @@
 
 # Monitor set
 monitor=eDP-1,1920x1080@60,0x0,1
+#monitor=HDMI-A-1,1920x1080@60,0x0,1
 
 # Wallpaper set
-exec-once = swww init & swww img ~/Wallpapers/sw.gif
+exec-once = swww init
+
+exec-once = swww img ~/Wallpapers/sw.gif
+
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once=~/.config/hypr/scripts/screensharing.sh
 
 # Bar start
 exec-once = waybar 
@@ -31,6 +37,7 @@ exec-once = dunst
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
+exec-once=hyprctl setcursor Sweet-cursors 24
 
 # Bluetooth
 exec-once=blueman-applet
@@ -135,13 +142,15 @@ misc {
 windowrulev2 = float,class:^(blueman-manager)$
 windowrule= float ,Rofi
 
-windowrule=opacity 0.92,spotify
+windowrule=opacity 0.96 override 0.96, Spotify
 windowrule=opacity 0.9 override 0.9,thunar
-windowrule=opacity 0.96,discord
+windowrule=opacity 0.96,WebCord
 windowrule=opacity 0.9 override 0.9,Code
 windowrule=opacity 0.96 override 0.96,kitty
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
+
+bind = $mainMod, Print, exec, grim -g "$(slurp)"
 
 # Key binds
 bind = $mainMod, RETURN, exec, kitty
